<resources>
    <string name="app_name" translatable="false">Life Story</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Have an interesting experience, buddy? Let\'s share your interesting experience with your friends here.!</string>
    <string name="title_welcome_page">Welcome to Story!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="masukkan_email_anda">Enter your email</string>
    <string name="masukkan_nama_anda">Enter your name</string>
    <string name="masukkan_password_anda">Enter your password</string>
    <string name="unknown_error">Unknown error</string>
    <string name="add_story">Add story</string>
    <string name="a_story_picture">A Story picture</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="add_the_story_description">Add the story description</string>
    <string name="created_at">Created at</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="description">Description</string>
    <string name="a_banner_with_two_people_talks_to_each_other_in_a_phone">A banner with two people talks to each other in a phone</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="the_list_is_empty">The list is empty</string>
    <string name="no_internet_connection_please_try_again">No internet connection. Please try again.</string>
    <string name="try_again">Try Again</string>
    <string name="language">language</string>
    <string name="title_signup_page">Complete your data below!</string>
    <string name="message_login_page">Enter your data first</string>
    <string name="mari_bagikan_pengalamanmu">Let\'s share your experience!</string>
    <string name="tiga_orang_sedang_berkumpul_di_taman_dan_saling_berbagi_cerita">Three people gather in a park and share stories with each other</string>
    <string name="select_language">Select language</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="failed">Failed</string>
    <string name="no_media_selected">No media selected</string>
    <string name="please_enter_a_description">Please enter a description</string>
    <string name="please_select_an_image">Please select an image</string>
    <string name="error">Error: %1$s</string>
    <string name="failed_to_open_file">Failed to open file</string>
    <string name="detail_story">Detail Story</string>
    <string name="congratulations_you_re_successfully_registered">Congratulations %1$s, you\'re successfully registered!</string>
    <string name="congratulations_you_re_successfully_logged_in">Congratulations %1$s, you\'re successfully logged in</string>
    <string name="story_uploaded_successfully">Story uploaded successfully</string>

</resources>